[package]
name = "c2ers"
version = "0.1.0"
authors = ["Archibald Neil MacDonald <FortOyer@hotmail.co.uk>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
log = "0.4.11"
env_logger = "0.7.1"