[package]
name = "callengine"
version = "0.1.0"
authors = ["Archibald Neil MacDonald <FortOyer@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.19"
quote = "1.0.7"

[dependencies.syn]
version = "1.0.39"
features = ["derive", "full"]
