[package]
name = "nornpulse"
version = "0.1.0"
authors = ["Archibald Neil MacDonald <FortOyer@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "*"
c2ers = { path = "../c2ers" }