[package]
name = "nornpulse"
version = "0.1.0"
authors = ["Archibald Neil MacDonald <FortOyer@hotmail.co.uk>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
callengine = { path = "../callengine" }
libc = "0.2.74"
log = "0.4.11"
num-traits = "0.2"
num-derive = "0.3"
pest = "2.1.3"
pest_derive = "2.1.0"
sdl2 = "0.34"
sdl2-sys = "0.34.2"
snailquote = "0.3.0"

[dependencies.winapi]
version = "0.3.9"
features = ["memoryapi", 
            "processthreadsapi", 
            "winuser", 
            "timeapi",
            "errhandlingapi", 
            "impl-default",
            "windowsx"]
